# karin-core

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
core/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
core/examples/: CMakeLists.txt
core/examples/gui/hello_clickevent/: CMakeLists.txt  main.cpp
core/examples/gui/hello_layout/: main.cpp
core/examples/gui/text_node/: main.cpp
core/include/karin/: gui.h
core/include/karin/graphics/: font.h  font_face.h  graphics_context.h  paragraph_style.h  path.h  renderer.h  text_blob.h  text_engine.h  text_style.h
core/include/karin/gui/: application.h  container_node.h  leaf_node.h  view_node.h  window.h
core/include/karin/system/: application.h  event.h  window.h
core/src/: CMakeLists.txt
core/src/common/utils/: hash.h
core/src/graphics/: path.cpp  renderer_impl.h
core/src/graphics/d2d/: d2d_context.cpp  d2d_font_renderer.h  d2d_graphics_context_impl.cpp  d2d_graphics_context_impl.h  d2d_surface_manager.cpp  d2d_surface_manager.h
core/src/graphics/text/: font_loader.cpp  font_loader_platform.h  platform.h  text_engine.cpp  text_engine_impl.h
core/src/graphics/vulkan/: glm_geometry.h  vma.h  vulkan_context.cpp  vulkan_debug_manager.h  vulkan_device_resources.cpp  vulkan_device_resources.h  vulkan_font_renderer.cpp  vulkan_font_renderer.h  vulkan_glyph_cache.h  vulkan_pipeline.cpp  vulkan_pipeline.h  (+3 more)
core/src/gui/: CMakeLists.txt  application.cpp  application_context.cpp  application_context.h  container_node.cpp  event_dispatcher.cpp  event_dispatcher.h  leaf_node.cpp  rectangle_node.cpp  view_node.cpp  window.cpp
core/src/system/: CMakeLists.txt  application.cpp  application_impl.h  platform.h  window.cpp
examples/: CMakeLists.txt
examples/gui/hello_layout/: CMakeLists.txt  main.cpp
examples/gui/text_node/: CMakeLists.txt  main.cpp
examples/kotlin/: build.gradle.kts  settings.gradle.kts
languages/kotlin/: .gitignore  CMakeLists.txt  build.gradle.kts  settings.gradle.kts
src/: CMakeLists.txt
src/common/: point.cpp  rectangle.cpp  size.cpp
src/common/d2d/: dwrite_converter.h  matrix_converter.h
src/common/geometry/: d2d_rectangle.h  glm_geometry.h  transform2d.cpp
src/common/utils/: hash.h  string.h
src/common/vulkan/: vk_utils.cpp  vk_utils.h  vma.h
src/common/x11/: window.h
src/graphics/: CMakeLists.txt  font_renderer_impl.h  gradient_points.cpp  graphics_context.cpp  graphics_context_impl.h  graphics_device.cpp  hash.cpp  linear_gradient_pattern.cpp  path.cpp  path_impl.cpp  path_impl.h  pattern.cpp  platform.h  radial_gradient_pattern.cpp  radical_gradient_pattern.cpp  renderer.cpp  renderer_impl.h  solid_color_pattern.cpp
src/graphics/d2d/: d2d_color.h  d2d_consts.h  d2d_context.cpp  d2d_context.h  d2d_device_resources.cpp  d2d_device_resources.h  d2d_font_renderer.cpp  d2d_font_renderer.h  d2d_geometry.h  d2d_graphics_context_impl.cpp  d2d_graphics_context_impl.h  d2d_graphics_device.cpp  d2d_graphics_device.h  d2d_renderer_impl.cpp  d2d_renderer_impl.h  d2d_surface_manager.cpp  d2d_surface_manager.h
src/graphics/graphics/: graphics_context.cpp  graphics_context_impl.h  path.cpp  path_impl.cpp  path_impl.h  platform.h  renderer.cpp  renderer_impl.h
src/graphics/resources/: graphics_device.cpp  graphics_device_impl.h  platform.h  surface.cpp  surface_impl.h
src/graphics/shaders/: frag.glsl  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shaders.h  vert.glsl  vert.spv
src/graphics/text/: CMakeLists.txt  font_database.cpp  font_database.h  font_database_platform.h  font_face.h  font_layouter.cpp  font_layouter.h  font_loader.cpp  font_loader.h  font_loader_platform.h  font_renderer.cpp  font_renderer.h  font_renderer_platform.h  harfbuzz_provider.h  platform.h  text_engine.cpp  text_engine_impl.cpp  text_engine_impl.h  text_layouter.cpp  text_layouter.h  text_renderer.cpp  text_renderer.h
src/graphics/vulkan/: glm_geometry.h  vk_debug_manager.cpp  vk_debug_manager.h  vk_functions.h  vk_graphics_context_impl.cpp  vk_graphics_context_impl.h  vk_graphics_device.cpp  vk_graphics_device.h  vk_pipeline_manager.cpp  vk_pipeline_manager.h  vk_renderer_impl.cpp  vk_renderer_impl.h  vk_surface_manager.cpp  vk_surface_manager.h  vk_utils.cpp  vk_utils.h  vulakn_functions.h  vulkan_context.h  vulkan_debug_manager.cpp  vulkan_debug_manager.h  vulkan_device_resources.cpp  vulkan_device_resources.h  vulkan_font_renderer.cpp  vulkan_font_renderer.h  vulkan_glyph_cache.cpp  vulkan_glyph_cache.h  vulkan_graphics_context_impl.cpp  vulkan_graphics_context_impl.h  vulkan_graphics_device.cpp  vulkan_graphics_device.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderer_impl.cpp  vulkan_renderer_impl.h  vulkan_surface.cpp  vulkan_surface.h  vulkan_tessellator.cpp  vulkan_tessellator.h  vulkan_utils.cpp  vulkan_utils.h
src/gui/: CMakeLists.txt  application.cpp  application.h  container_node.cpp  container_node.h  leaf_node.cpp  leaf_node.h  rectangle_node.cpp  rectangle_node.h  text_node.cpp  text_node.h  view_node.cpp  view_node.h  window.cpp  window.h
src/system/: CMakeLists.txt  application.cpp  application.h  application_impl.h  platform.h  system_font.cpp  system_font_impl.h  window.cpp  window_impl.h
src/system/windows/: win_application_impl.cpp  win_application_impl.h  win_context.cpp  win_context.h  win_converter.cpp  win_converter.h  win_event.cpp  win_event.h  win_system_font.cpp  win_system_font.h  win_system_font_impl.cpp  win_system_font_impl.h  win_window_class_manager.cpp  win_window_class_manager.h  win_window_class_registry.cpp  win_window_class_registry.h  win_window_impl.cpp  win_window_impl.h
src/system/x11/: x11_application_impl.cpp  x11_application_impl.h  x11_context.h  x11_converter.cpp  x11_system_font_impl.cpp  x11_system_font_impl.h  x11_window_impl.cpp  x11_window_impl.h
test/: CMakeLists.txt
test/common/: point_test.cpp  rectangle_test.cpp  size_test.cpp
test/common/color/: color_test.cpp
test/common/geometry/: size_test.cpp  transform2d_test.cpp
test/graphics/text/: fontface_platform_test.cpp
(+227 files in other folders)
