cmake_minimum_required(VERSION 3.28)
project(karin)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(SCRIPTS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/scripts)
if (WIN32)
    if (WINDOWS_VULKAN)
        set(VULKAN ON)
        set(DIRECTX OFF)
    else ()
        set(VULKAN OFF)
        set(DIRECTX ON)
    endif ()
elseif (LINUX)
    set(VULKAN ON)
    set(DIRECTX OFF)
else ()
    message(FATAL_ERROR "Unsupported platform")
endif ()

add_subdirectory(src)
add_subdirectory(examples)
add_subdirectory(test)