project(karin-core)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(SCRIPTS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/scripts)
set(THIRD_PARTY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party)
if (WIN32)
    if (WINDOWS_VULKAN)
        set(VULKAN ON)
        set(DIRECTX OFF)
    else ()
        set(VULKAN OFF)
        set(DIRECTX ON)
    endif ()
elseif (LINUX)
    set(VULKAN ON)
    set(DIRECTX OFF)
else ()
    message(FATAL_ERROR "Unsupported platform")
endif ()

if (MSVC)
    add_compile_options("/utf-8")
endif ()

add_subdirectory(src)
add_subdirectory(examples)
add_subdirectory(test)