add_subdirectory(system/window/hello_window)
add_subdirectory(system/window/maximize_window)
add_subdirectory(system/window/set_size)

add_subdirectory(graphics/graphics/hello_graphics)
add_subdirectory(graphics/graphics/fill_primitive_geometry)
add_subdirectory(graphics/graphics/draw_primitive_geometry)
add_subdirectory(graphics/graphics/draw_path)
add_subdirectory(graphics/graphics/fill_path)
add_subdirectory(graphics/graphics/linear_gradient_pattern)