cmake_minimum_required(VERSION 3.28)
project(karin_examples_draw_text_japanese)

set(CMAKE_CXX_STANDARD 20)

add_executable(karin_examples_draw_text_japanese main.cpp)
add_dependencies(karin_examples_draw_text_japanese karin_system karin_graphics)
target_link_libraries(karin_examples_draw_text_japanese PRIVATE karin_system karin_graphics)
target_include_directories(karin_examples_draw_text_japanese PRIVATE ${INCLUDE_DIR})